--- a/templates/app/src/index.tpl.html
+++ b/templates/app/src/index.tpl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="<%= appPrefix %>" lang="en">
+<html lang="en">
 <head>
     <style>
         /* This helps the ng-show/ng-hide animations start at the right place. */
